--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>practice for git commands</h1>
     <h2>zishan sir </h2>
     <h1>practice for git commands check kar</h1>
+    <h1>13/06/25 try to practice git commands 1 git add 2 git pull 3 git push 4 git commit -m 5 non <h2>
 </body>
 </html>
